Reshuffling and Input validation